    - [ 1680 ] jython -c option is not parsed right
    - [ 1681 ] JSR-223, Jython 2.5.2 and implementing Java Interfaces from Python
    - [ 1675 ] Jython exits prematurely when executing a file, thus killing Swing windows
    - [ 1682 ] exit code of 0 on unhandled exception
    - [ 1668 ] strptime('','') works on cpython but not on jython
      
Jython 2.5.2rc2
  Bugs Fixed
    - [ 1665 ] cPickle calls __import__ with illegal parameters
    - [ 1628 ] getpass.getpass echoes input
    - Fix logic to detect that a console is interactive (related to #1133)

Jython 2.5.2rc1
  Bugs Fixed
    - [ 1133 ] Support ipython and other completers with readline emulation
    - [ 1642 ] JSR223 PyScriptEngine#getInterface returns a NPE when called with zero args
    - [ 1662 ] time.strptime does not use Java date format strings properly
    - [ 1543 ] PyArray fails to clean up pre-allocated space
    - [ 1661 ] Error at on exit in TCC/LE
    - [ 1639 ] JBoss 5, vfszip protocol in use for jarFileName in PySystemState
    - [ 1660 ] threading module memory leak
    - [ 1452 ] pydoc help() function fails because sys.executable is None in stand-alone Jython
    - [ 1568 ] sys.stdout.encoding returns wrong value in Windows with Jython 2.5.1 (fixed on Java 6 only)
    - [ 1647 ] zxJDBC does not handle NVARCHAR
    -  SocketServer module now supports ephemeral server ports (by using port  0); see discussion for #1660

Jython 2.5.2b2
  Bugs Fixed
    - [ 1327 ] Classloaders cannot GC, which exhausts permgen (partial  bug fix)
    - [ 1604 ] PyBuiltinCallable.Info should be serializable
    - [ 1397 ] Bugs in PyList and PyJavaType.ListIndexDelegate slice setting
    - [ 1503 ] Java constructors should take keyword arguments
    - [ 1648,1495,1516 ] Incomplete implementation of pep328 for relative imports
    - [ 1611 ] Jython bytecode violated JLS, causing NPE on Sun's JVM when using -Xcomp option
    - [ 1643 ] Tools subdirectory still exists in trunk